--- a/canaa/core/templates/base.html
+++ b/canaa/core/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="generator" content="Polpa Canaã">
-	<title>Pola Canaã</title>
+	<title>Polpa Canaã</title>
 
 	<script src="http://www.google-analytics.com/ga.js" async="" type="text/javascript"></script>
 	<script src="//ajax.cloudflare.com/cdn-cgi/nexp/dokv=97fb4d042e/cloudflare.min.js" async=""></script>
