--- a/canaa/core/templates/home.html
+++ b/canaa/core/templates/home.html
@@ -14,8 +14,8 @@
                             <div class="mod-article-single mod-article-single__created">
                                 <div class="item__module">
                                     <div class="item_introtext">
-                                        <p>A Canaã foi fundada em agosto de 1995 na cidade de Macaparana/PE. <br> Porém o grupo já trabalhava com frutas a mais de 5 anos.</p>
-                                        <a class="btn btn-info readmore" href="#"><span>conheça nossa empresa</span></a>
+                                        <!--<p>A Canaã foi fundada em agosto de 1995 na cidade de Macaparana/PE. <br> Porém o grupo já trabalhava com frutas a mais de 5 anos.</p>-->
+                                        <a class="btn btn-info readmore" href="{% url 'institutional' %}"><span>conheça nossa empresa</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -164,13 +164,13 @@
 
                     <div class="moduletable offer span6">
                         <h1 class="moduleTitle ">
-                            <span class="item_title_part0">Refresco</span><br> <span class="item_title_part1">Em</span> <span class="item_title_part2">Pó</span> <span class="item_title_part3">100%</span> <span class="item_title_part4"></span> <span class="item_title_part5">Natural</span>
+                            <span class="item_title_part0">Refresco</span><br> <span class="item_title_part1">Em</span> <span class="item_title_part2">Pó</span> <span class="item_title_part3"></span> <span class="item_title_part4">Natural</span>
                         </h1>
                         <div class="mod-article-single mod-article-single__offer">
                             <div class="item__module">
                                 <div class="item_introtext">
                                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
-                                    <a class="btn btn-info readmore" href="#"><span>conheça a linha de refresco em pó</span></a>
+                                    <a class="btn btn-info readmore" href="{% url 'products' %}"><span>conheça a linha de refresco em pó</span></a>
                                 </div>
                             </div>
                         </div>
