--- a/canaa/core/templates/home.html
+++ b/canaa/core/templates/home.html
@@ -7,7 +7,7 @@
             <div class="container">
                 <div class="row">
                     <nav>
-                        <div class="moduletable created  span12">
+                        <div class="moduletable created banner span12">
                             <h2 class="moduleTitle ">
                                 <span class="item_title_part0">O Sabor</span> <span class="item_title_part1">da Natureza,</span> <br> <span class="item_title_part2">Polpas</span> <span class="item_title_part3">de Fruta</span> <span class="item_title_part4">Canaã.</span> 
                             </h2>
