--- a/canaa/core/templates/base.html
+++ b/canaa/core/templates/base.html
@@ -30,6 +30,9 @@
   	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" type="text/css">
   	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" type="text/css">
   	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Bevan" type="text/css">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Pathway+Gothic+One" type="text/css">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Oswald" type="text/css">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lemon" type="text/css">
 
   	<link rel="stylesheet" href="{{ STATIC_URL }}css/superfish.css" type="text/css">
   	<link rel="stylesheet" href="{{ STATIC_URL }}css/superfish-navbar.css" type="text/css">
