Adicionando funcao para o bg, pag de marketing e produtos

--- a/canaa/blog/templates/blog/blog.html
+++ b/canaa/blog/templates/blog/blog.html
@@ -156,10 +156,10 @@
 							<div class="pagination">
 								<ul>
 									<li class="pagination-start firstItem">
-										<a data-original-title="Start" title="" href="#" class="hasTooltip pagenav">Start</a>
+										<a data-original-title="Início" title="" href="#" class="hasTooltip pagenav">Início</a>
 									</li>
 									<li class="pagination-prev">
-										<a data-original-title="Prev" title="" href="#" class="hasTooltip pagenav">Prev</a>
+										<a data-original-title="Anterior" title="" href="#" class="hasTooltip pagenav">Anterior</a>
 									</li>
 									<li class="num">
 										<a href="#" class="pagenav">1</a>
@@ -171,10 +171,10 @@
 										<a href="#" class="pagenav">3</a>
 									</li>
 									<li class="pagination-next">
-										<a data-original-title="Next" title="" href="#" class="hasTooltip pagenav">Next</a>
+										<a data-original-title="Próxima" title="" href="#" class="hasTooltip pagenav">Próxima</a>
 									</li>
 									<li class="pagination-end lastItem">
-										<a data-original-title="End" title="" href="#" class="hasTooltip pagenav">End</a>
+										<a data-original-title="Fim" title="" href="#" class="hasTooltip pagenav">Fim</a>
 									</li>
 								</ul>
 							</div>
