--- a/canaa/talents/templates/talents/talent.html
+++ b/canaa/talents/templates/talents/talent.html
@@ -16,7 +16,9 @@
                             <div class="page_header">
                                 <h3><span class="item_title_part0">Trabalhe Conosco</span></h3>
                             </div>
-                            <img src="{{ STATIC_URL }}images/trabalhe_conosco_canaa.jpg" style="width: 900px; padding-bottom: 40px;">
+                            <div style="width: 900px; padding-bottom: 40px;">
+                                <img src="{{ STATIC_URL }}images/trabalhe_conosco_canaa.jpg" style="border: 1px solid #e1e1e1;">
+                            </div>
                             <!-- Address -->
                             <div class="row-fluid">
                                 <div class="contact_details">
