--- a/canaa/core/static/css/template.css
+++ b/canaa/core/static/css/template.css
@@ -400,8 +400,11 @@ input[type='checkbox'] {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
-html {
+.bg-banner{
   background: url(../images/bg11.jpg) 50% 112px repeat-x #5c778b; /*#9e9e9e;*/
+}
+html {
+  background: url(../images/bg-full.png) repeat #a5b4bf;
 }
 html#error {
   background-position: 50% top;
