--- a/canaa/core/templates/base.html
+++ b/canaa/core/templates/base.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html class="csstransforms no-csstransforms3d csstransitions" xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-br" lang="pt-br">
+<html class="{% block bg_banner %}{% endblock %} csstransforms no-csstransforms3d csstransitions" xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-br" lang="pt-br">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="generator" content="Polpa Canaã">
