--- a/canaa/core/static/css/responsive.css
+++ b/canaa/core/static/css/responsive.css
@@ -29,7 +29,7 @@
 ========================================================================*/
 /* Large desktop */
 @media (min-width: 1200px) {
-  
+
 }
 /*== Up to 1200px =====================================================
 ========================================================================*/
@@ -83,9 +83,9 @@
   }
 }
 @media (max-width: 1024px) {
-  html {
-    background-image: url(../images/bg_1200.jpg);
-  }
+    html {
+      background: url(../images/bg-full.png) repeat #a5b4bf;
+    }
 }
 /*== Up to 980px ======================================================
 ========================================================================*/
@@ -148,7 +148,7 @@
 ========================================================================*/
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
-  
+
 }
 /*== Up to 767px ======================================================
 ========================================================================*/
@@ -454,5 +454,5 @@
 ========================================================================*/
 /* Portrait phones */
 @media (max-width: 340px) {
-  
+
 }
