--- a/canaa/core/static/css/template.css
+++ b/canaa/core/static/css/template.css
@@ -51,7 +51,7 @@ h6 a:hover {
   color: #486E8A; /*#ff4e3d;*/
 }
 h1 {
-  font-family: 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
+  font-family: 'Open Sans', 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
   color: #fff;
   font-weight: normal;
   font-size: 56px;
@@ -59,7 +59,7 @@ h1 {
   margin-bottom: 20px;
 }
 h2 {
-  font-family: 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
+  font-family: 'Open Sans', 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
   color: #fff;
   font-weight: normal;
   font-size: 48px;
@@ -70,7 +70,7 @@ h2 {
   font-family: 'Lemon', cursive;
 }
 h3 {
-  font-family: 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
+  font-family: 'Open Sans', 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
   color: #2f2f2f;
   font-weight: normal;
   font-size: 36px;
@@ -79,14 +79,14 @@ h3 {
 h4 {
   color: #616161;
   font-weight: normal;
-  font-family: 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
+  font-family: 'Open Sans', 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
   font-size: 26px;
   line-height: 32px;
   margin: 0 0 24px;
   font-style: normal;
 }
 h5 {
-  font-family: 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
+  font-family: 'Open Sans', 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
   color: #fff;
   font-weight: normal;
   font-size: 24px;
@@ -416,7 +416,7 @@ body {
 /*======================= HEADER =======================*/
 #header-row {
   padding: 0px;
-  background: none repeat scroll 0% 0% rgb(255, 255, 255); 
+  background: none repeat scroll 0% 0% rgb(255, 255, 255);
   margin-bottom: 25px;
   -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
@@ -1040,7 +1040,7 @@ blockquote small {
   text-align: center;
   border: 4px solid #486E8A; /*#ff4e3d;*/
   color: #7c7c7c;
-  font-family: 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
+  font-family: 'Open Sans', 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
   text-transform: uppercase;
   margin-right: 12px;
 }
@@ -1067,7 +1067,7 @@ blockquote small {
   border-radius: 10px;
   background: #ff4e3d;
   color: #fff;
-  font-family: 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
+  font-family: 'Open Sans', 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
   font-size: 36px;
   position: relative;
   display: block;
@@ -1207,7 +1207,7 @@ blockquote small {
 }
 #copyright {
   color: #fff;
-  font-family: 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
+  font-family: 'Open Sans', 'Oswald', 'Pathway Gothic One', 'Bevan', cursive;
   font-size: 18px;
 }
 #copyright .year:after {
@@ -1253,4 +1253,18 @@ blockquote small {
 .social li a:hover {
   opacity: 1;
   filter: alpha(opacity=100);
+}
+.marketing video, iframe, img {
+  width: 100%;
+}
+
+.sellers table, td, th {
+    border: 1px solid #e1e1e1;
+    padding: 4px 8px;
+    font-size: 13px;
+}
+
+.sellers th {
+    background-color: #e1e1e1;
+    /* color: white; */
 }
