--- a/canaa/core/templates/marketing.html
+++ b/canaa/core/templates/marketing.html
@@ -34,11 +34,18 @@
                                             -->
                                         </div>
                                         <div class="item_content">
-                                            <div class="item_img img-intro img-intro__left">
-                                                <a href="#">
-                                                    <canvas style="position: absolute; top: 0px; left: 0px; display: none; width: 349px; height: 286px;" class="BWfade" width="349" height="286"></canvas>
-                                                    <img src="{{ STATIC_URL }}images/blog/blog-thumb4.jpg" alt="">
-                                                </a>
+                                            <div class="item_img img-intro marketing">
+                                            <!--
+                                                <iframe src="//player.vimeo.com/video/99541639" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/99541639">Plurabelle - Our Fires</a> from <a href="http://vimeo.com/mattisdovier">Mattis Dovier</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+                                             -->
+
+                                                <video controls>
+                                                    <source src="video.mp4" type="video/mp4">
+                                                    <object>
+                                                        <embed src="video.mp4" type= "application/x-shockwave-flash" allowfullscreen="false" allowscriptaccess="always" />
+                                                    </object>
+                                                    <p>O seu navegador não suporta esse vídeo.</p>
+                                                </video>
                                             </div>
                                             <div class="item_header">
                                                 <h4 class="item_title">
@@ -71,15 +78,13 @@
                                     </div>
                                 </div>
                             </div>
+<!--
                             <div class="items-row cols-1 row-1 row-fluid">
                                 <div class="span12">
                                     <div class="item column-1">
                                         <div class="item_content">
-                                            <div class="item_img img-intro img-intro__left">
-                                                <a href="#">
-                                                    <canvas style="position: absolute; top: 0px; left: 0px; display: none; width: 349px; height: 286px;" class="BWfade" width="349" height="286"></canvas>
-                                                    <img src="{{ STATIC_URL }}images/blog/blog-thumb5.jpg" alt="">
-                                                </a>
+                                            <div class="item_img img-intro marketing">
+                                                <img src="{{ STATIC_URL }}images/blog/blog-thumb5.jpg" alt="">
                                             </div>
                                             <div class="item_header">
                                                 <h4 class="item_title">
@@ -99,11 +104,8 @@
                                 <div class="span12">
                                     <div class="item column-1">
                                         <div class="item_content">
-                                            <div class="item_img img-intro img-intro__left">
-                                                <a href="#">
-                                                    <canvas style="position: absolute; top: 0px; left: 0px; display: none; width: 349px; height: 286px;" class="BWfade" width="349" height="286"></canvas>
-                                                    <img src="{{ STATIC_URL }}images/blog/blog-thumb6.jpg" alt="">
-                                                </a>
+                                            <div class="item_img img-intro marketing">
+                                                <img src="{{ STATIC_URL }}images/blog/blog-thumb6.jpg" alt="">
                                             </div>
                                             <div class="item_header">
                                                 <h4 class="item_title">
@@ -121,6 +123,7 @@
                                     </div>
                                 </div>
                             </div>
+                             -->
                             <div class="pagination">
                                 <ul>
                                     <li class="pagination-start firstItem">
