--- a/canaa/core/templates/products.html
+++ b/canaa/core/templates/products.html
@@ -29,17 +29,17 @@
                       <li><a class="" href="#" data-filter=".PF_5kg">Polpa de Fruta (Linha Industrial 5kg)</a></li>
                       <li class="lastItem"><a class="" href="#" data-filter=".RP">Refresco em Pó</a></li>
                   </ul>
-                  
+
                   <div class="clearfix"></div>
                 </div>
-  
+
                 <div class="row-fluid">
                   <ul id="isotopeContainer" class="gallery items-row cols-3 hover_true isotope">
-                    <li class="gallery-item style2 PF_100g firstItem isotope-item">        
+                    <li class="gallery-item style2 PF_100g firstItem isotope-item">
                       <!-- Icons -->
                       <div class="view">
-                        <!-- Image  -->     
-                        <div class="item_img img-intro img-intro__left"> 
+                        <!-- Image  -->
+                        <div class="item_img img-intro img-intro__left">
                           <img src="{{ STATIC_URL }}images/products/polpa_canaa_manga_thumb.jpg" alt="">
                         </div>
                         <div class="mask"></div>
@@ -72,11 +72,11 @@
                       </div>
                       <div class="clearfix"></div>
                     </li><!-- end span -->
-                    <li class="gallery-item style2 PF_100g firstItem isotope-item">        
+                    <li class="gallery-item style2 PF_100g firstItem isotope-item">
                       <!-- Icons -->
                       <div class="view">
-                        <!-- Image  -->     
-                        <div class="item_img img-intro img-intro__left"> 
+                        <!-- Image  -->
+                        <div class="item_img img-intro img-intro__left">
                           <img src="{{ STATIC_URL }}images/products/polpa_canaa_manga_thumb.jpg" alt="">
                         </div>
                         <div class="mask"></div>
@@ -109,11 +109,11 @@
                       </div>
                       <div class="clearfix"></div>
                     </li><!-- end span -->
-                    <li class="gallery-item style2 PF_100g firstItem isotope-item">        
+                    <li class="gallery-item style2 PF_100g firstItem isotope-item">
                       <!-- Icons -->
                       <div class="view">
-                        <!-- Image  -->     
-                        <div class="item_img img-intro img-intro__left"> 
+                        <!-- Image  -->
+                        <div class="item_img img-intro img-intro__left">
                           <img src="{{ STATIC_URL }}images/products/polpa_canaa_manga_thumb.jpg" alt="">
                         </div>
                         <div class="mask"></div>
@@ -146,11 +146,11 @@
                       </div>
                       <div class="clearfix"></div>
                     </li><!-- end span -->
-                    <li class="gallery-item style2 PF_100g firstItem isotope-item">        
+                    <li class="gallery-item style2 PF_100g firstItem isotope-item">
                       <!-- Icons -->
                       <div class="view">
-                        <!-- Image  -->     
-                        <div class="item_img img-intro img-intro__left"> 
+                        <!-- Image  -->
+                        <div class="item_img img-intro img-intro__left">
                           <img src="{{ STATIC_URL }}images/products/polpa_canaa_manga_thumb.jpg" alt="">
                         </div>
                         <div class="mask"></div>
@@ -183,11 +183,11 @@
                       </div>
                       <div class="clearfix"></div>
                     </li><!-- end span -->
-                    <li class="gallery-item style2 PF_100g firstItem isotope-item">        
+                    <li class="gallery-item style2 PF_100g firstItem isotope-item">
                       <!-- Icons -->
                       <div class="view">
-                        <!-- Image  -->     
-                        <div class="item_img img-intro img-intro__left"> 
+                        <!-- Image  -->
+                        <div class="item_img img-intro img-intro__left">
                           <img src="{{ STATIC_URL }}images/products/polpa_canaa_manga_thumb.jpg" alt="">
                         </div>
                         <div class="mask"></div>
@@ -196,7 +196,7 @@
                             <!--  title/author -->
                             <div class="item_header">
                               <h4 class="item_title">
-                                <a href="#"> <span class="item_title_part0">Polpa</span> <span class="item_title_part1">de</span> <span class="item_title_part2">Manga</span> </a>
+                                <a href="#"> <span class="item_title_part0">Polpa</span> <span class="item_title_part1">de</espan> <span class="item_title_part2">Manga</span> </a>
                               </h4>
                             </div>
                             <!-- info TOP -->
@@ -224,9 +224,10 @@
                 </div><!-- end row -->
               </div>
 
+
               <script type="text/javascript">
                 jQuery(document).ready(function() {
-                (function($){ 
+                (function($){
                  $(window).load(function(){
 
                   var $cols = 5;
@@ -284,13 +285,13 @@
                   });
                 });
               })(jQuery);
-              }); 
+              });
               </script>
 
-              
+
               <script type="text/javascript">
                 jQuery(document).ready(function() {
-                (function($){ 
+                (function($){
                  $(window).load(function(){
 
                   var $container = $('#isotopeContainer');
@@ -314,7 +315,7 @@
                           var $optionSet = $this.parents('#filters');
                           $optionSet.find('.selected').removeClass('selected');
                           $this.addClass('selected');
-                    
+
                           // make option object dynamically, i.e. { filter: '.my-filter-class' }
                           var options = {},
                               key = $optionSet.attr('data-option-key'),
@@ -329,12 +330,12 @@
                             // otherwise, apply new options
                             $container.isotope( options );
                           }
-                          
+
                           return false;
                       });
                  });
               })(jQuery);
-              }); 
+              });
               </script>
             <!-- Content-bottom -->
             </div>
@@ -345,5 +346,5 @@
     </div>
 
     <div id="push"></div>
-    
+
 {% endblock content %}
