--- a/canaa/talents/templates/talents/talent.html
+++ b/canaa/talents/templates/talents/talent.html
@@ -16,7 +16,7 @@
                             <div class="page_header">
                                 <h3><span class="item_title_part0">Trabalhe Conosco</span></h3>
                             </div>
-                            <div style="width: 900px; padding-bottom: 40px;">
+                            <div style="width: 100%; padding-bottom: 40px;">
                                 <img src="{{ STATIC_URL }}images/trabalhe_conosco_canaa.jpg" style="border: 1px solid #e1e1e1;">
                             </div>
                             <!-- Address -->
@@ -24,7 +24,7 @@
                                 <div class="contact_details">
                                     <div class="contact_details_item span7">
                                         <h3>Envie seu currículo</h3>
-                                        
+
                                         <div class="contact_address talent-form">
                                             <form enctype="multipart/form-data" method="post" action="." class="form-validate">
                                                 {% csrf_token %}
