Refatorando imagens/textos/links

--- a/canaa/blog/templates/blog/blog.html
+++ b/canaa/blog/templates/blog/blog.html
@@ -35,13 +35,13 @@
                                 <div class="thumbnail">
                                     <div class="thumbnail-body">
                                         <div class="wrapper-image">
-                                            <a href="http://localhost:8000/mais-saude/post" title="8 Benefícios do Açai para sua Saúde">
+                                            <a href="/mais-saude/post/" title="8 Benefícios do Açai para sua Saúde">
                                                 <center><img src="{{ STATIC_URL }}img/media/acai.jpg" alt=""></center>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="thumbnail-title">
-                                        <h2><a href="http://localhost:8000/mais-saude/post">8 Benefícios do Açai para sua Saúde</a></h2>
+                                        <h2><a href="/mais-saude/post/">8 Benefícios do Açai para sua Saúde</a></h2>
                                         <p>O Açaí é o fruto do açaizeiro, Ele é fruta tipicamente brasileira e de grande importância econômica...</p>
                                     </div>
                                 </div>
@@ -51,13 +51,13 @@
                                 <div class="thumbnail">
                                     <div class="thumbnail-body">
                                         <div class="wrapper-image">
-                                            <a href="http://localhost:8000/mais-saude/post" title="Abacaxi Emagrece e Elimina Líquido">
+                                            <a href="/mais-saude/post/" title="Abacaxi Emagrece e Elimina Líquido">
                                                 <center><img src="{{ STATIC_URL }}img/media/abacaxi.jpg" alt=""></center>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="thumbnail-title">
-                                        <h2><a href="http://localhost:8000/mais-saude/post">Abacaxi Emagrece e Elimina Líquido</a></h2>
+                                        <h2><a href="/mais-saude/post/">Abacaxi Emagrece e Elimina Líquido</a></h2>
                                         <p>Desde os primórdios da humanidade, as frutas possuem uma importância na dieta de todos, pois além de serem fáceis de consumir...</p>
                                     </div>
                                 </div>
@@ -67,13 +67,13 @@
                                 <div class="thumbnail">
                                     <div class="thumbnail-body">
                                         <div class="wrapper-image">
-                                            <a href="http://localhost:8000/mais-saude/post" title="Os 7 Benefícios da Manga">
+                                            <a href="/mais-saude/post/" title="Os 7 Benefícios da Manga">
                                                 <center><img src="{{ STATIC_URL }}img/media/manga.jpg" alt=""></center>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="thumbnail-title">
-                                        <h2><a href="http://localhost:8000/mais-saude/post">Os 7 Benefícios da Manga</a></h2>
+                                        <h2><a href="/mais-saude/post/">Os 7 Benefícios da Manga</a></h2>
                                         <p>Além de deliciosa, fruta é rica em vitaminas e previne doenças...</p>
                                     </div>
                                 </div>
@@ -83,13 +83,13 @@
                                 <div class="thumbnail">
                                     <div class="thumbnail-body">
                                         <div class="wrapper-image">
-                                            <a href="http://localhost:8000/mais-saude/post" title="Acerola Mágica">
+                                            <a href="/mais-saude/post/" title="Acerola Mágica">
                                                 <center><img src="{{ STATIC_URL }}img/media/acerola.jpg" alt=""></center>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="thumbnail-title">
-                                        <h2><a href="http://localhost:8000/mais-saude/post">Acerola Mágica</a></h2>
+                                        <h2><a href="/mais-saude/post/">Acerola Mágica</a></h2>
                                         <p>Sempre que minha imunidade está baixa e que a gripe quer me pegar, corro pra tomar suco de acerola, porque ela é...</p>
                                     </div>
                                 </div>
