--- a/canaa/blog/templates/blog/post.html
+++ b/canaa/blog/templates/blog/post.html
@@ -11,7 +11,7 @@
 
         <div class="row-fluid">
             <div class="k-top">
-                <center><img src="{{ STATIC_URL }}img/media/abacaxi.jpg" alt=""></center>
+                <center><img src="{{ STATIC_URL }}img/media/acai.jpg" alt=""></center>
             </div>
             <h4 class="marg20-top">Título da Matéria</h4>
             <div class="item_fulltext marg20-top">
