--- a/canaa/core/templates/home.html
+++ b/canaa/core/templates/home.html
@@ -18,49 +18,49 @@
 
         <div class="span3 k-item k-item_num0">
             <div class="k-item_img">
-                <a href="#">
+                <a href="/produtos/itens/">
                     <img src="{{ STATIC_URL }}/img/media/polpa_canaa_manga.jpg" alt="" style="width: 140px;">
                 </a>
             </div>
             <div class="k-item_content k-item_num0">
-                <h4><a href="#">Manga</a></h4>
+                <h4><a href="/produtos/itens/">Manga</a></h4>
                 <div class="k-item_introtext">
                     <p>Nertyase riertases lertyarssety kertyace aseteras aplicaboes kerti.</p>
                 </div>
-                <a class="btn btn-k-item_num0 btn-small" href="#"><span>veja mais</span></a>
+                <a class="btn btn-k-item_num0 btn-small" href="/produtos/itens/"><span>veja mais</span></a>
             </div>
         </div>
         <div class="span3 k-item k-item_num1">
             <div class="k-item_img">
-                <a href="#">
+                <a href="/produtos/itens/">
                     <img src="{{ STATIC_URL }}/img/media/polpa_canaa_manga.jpg" alt="" style="width: 140px;">
                 </a>
             </div>
             <div class="k-item_content k-item_num1">
-                <h4><a href="#">Manga</a></h4>
+                <h4><a href="/produtos/itens/">Manga</a></h4>
                 <div class="k-item_introtext">
                     <p>Nertyase riertases lertyarssety kertyace aseteras aplicaboes kerti.</p>
                 </div>
-                <a class="btn btn-k-item_num1 btn-small" href="#"><span>veja mais</span></a>
+                <a class="btn btn-k-item_num1 btn-small" href="/produtos/itens/"><span>veja mais</span></a>
             </div>
         </div>
         <div class="span3 k-item k-item_num2">
             <div class="k-item_img">
-                <a href="#">
+                <a href="/produtos/itens/">
                     <img src="{{ STATIC_URL }}/img/media/polpa_canaa_manga.jpg" alt="" style="width: 140px;">
                 </a>
             </div>
             <div class="k-item_content k-item_num2">
-                <h4><a href="#">Manga</a></h4>
+                <h4><a href="/produtos/itens/">Manga</a></h4>
                 <div class="k-item_introtext">
                     <p>Nertyase riertases lertyarssety kertyace aseteras aplicaboes kerti.</p>
                 </div>
-                <a class="btn btn-k-item_num2 btn-small" href="#"><span>veja mais</span></a>
+                <a class="btn btn-k-item_num2 btn-small" href="/produtos/itens/"><span>veja mais</span></a>
             </div>
         </div>
         <div class="span3 k-item k-item_num3">
             <div class="k-item_img">
-                <a href="#">
+                <a href="/produtos/itens/">
                     <img src="{{ STATIC_URL }}/img/media/polpa_canaa_manga.jpg" alt="" style="width: 140px;">
                 </a>
             </div>
@@ -69,7 +69,7 @@
                 <div class="k-item_introtext">
                     <p>Nertyase riertases lertyarssety kertyace aseteras aplicaboes kerti.</p>
                 </div>
-                <a class="btn btn-k-item_num3 btn-small" href="#"><span>veja mais</span></a>
+                <a class="btn btn-k-item_num3 btn-small" href="/produtos/itens/"><span>veja mais</span></a>
             </div>
         </div>
 
@@ -81,30 +81,30 @@
         <!-- begin:blog -->
         <div class="span3 k-item">
             <div class="k-item_img">
-                <a href="http://localhost:8000/mais-saude/post">
-                    <img src="http://www.jookle.com.br/demos/canaa/vermelhas2.jpg" alt="">
+                <a href="/mais-saude/post/">
+                    <img src="{{ STATIC_URL }}img/media/acai.jpg" alt="">
                 </a>
             </div>
             <div class="k-item_content">
-                    <h3>O Poder das Frutas Vermelhas</h3>
+                    <h3>8 Benefícios do Açai para sua Saúde</h3>
                 <div class="k-item_introtext">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt adipiscing elit.</p>
+                    <p>O Açaí é o fruto do açaizeiro, Ele é fruta tipicamente brasileira e de grande importância econômica...</p>
                 </div>
-                <a class="btn btn-red btn-small" href="http://localhost:8000/mais-saude/post"><span>veja mais</span></a>
+                <a class="btn btn-red btn-small" href="/mais-saude/post/"><span>veja mais</span></a>
             </div>
         </div>
         <div class="span3 k-item">
             <div class="k-item_img">
-                <a href="http://localhost:8000/mais-saude/post">
-                    <img src="http://www.jookle.com.br/demos/canaa/maca.jpg" alt="">
+                <a href="/mais-saude/post/">
+                    <img src="{{ STATIC_URL }}img/media/abacaxi.jpg" alt="">
                 </a>
             </div>
             <div class="k-item_content">
-                <h3>Conheça os 10 Benefícios da Maçã</h3>
+                <h3>Abacaxi Emagrece e Elimina Líquido</h3>
                 <div class="k-item_introtext">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt adipiscing elit.</p>
+                    <p>Desde os primórdios da humanidade, as frutas possuem uma importância na dieta de...</p>
                 </div>
-                <a class="btn btn-red btn-small" href="http://localhost:8000/mais-saude/post"><span>veja mais</span></a>
+                <a class="btn btn-red btn-small" href="/mais-saude/post/"><span>veja mais</span></a>
             </div>
         </div>
         <div class="moduletable k-offer span6">
