--- a/canaa/catalog/templates/catalog/group.html
+++ b/canaa/catalog/templates/catalog/group.html
@@ -23,124 +23,120 @@
 
         <!-- begin:content -->
         <div class="row-fluid">
-            <!-- begin:elements -->
-            <div class="row-fluid content-home">
-                <!-- begin:blog-article -->
-                <div class="span12 products blog">
-                    <div class="row-fluid">
-                        <ul class="thumbnails">
-                          <!-- begin:loop-article -->
-                          <li class="span4">
-                            <div class="thumbnail">
-                                <div class="thumbnail-body">
-                                    <a href="http://localhost:8000/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
-                                        <img src="{{ STATIC_URL }}img/media/polpa_1.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="thumbnail-title">
-                                    <h2><a href="http://localhost:8000/produtos/itens/">Polpa 100g</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
-                                </div>
+            <!-- begin:blog-article -->
+            <div class="span12 products blog">
+                <div class="row-fluid">
+                    <ul class="thumbnails">
+                      <!-- begin:loop-article -->
+                      <li class="span4">
+                        <div class="thumbnail">
+                            <div class="thumbnail-body">
+                                <a href="/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
+                                    <img src="{{ STATIC_URL }}img/media/polpa_1.jpg" alt="">
+                                </a>
                             </div>
-                          </li>
-                          <!-- break -->
-                          <li class="span4">
-                            <div class="thumbnail">
-                                <div class="thumbnail-body">
-                                    <a href="http://localhost:8000/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
-                                        <img src="{{ STATIC_URL }}img/media/polpa_2.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="thumbnail-title">
-                                    <h2><a href="http://localhost:8000/produtos/itens/">Polpa 100g</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
-                                </div>
-                            </div>
-                          </li>
-                          <!-- break -->
-                          <li class="span4">
-                            <div class="thumbnail">
-                                <div class="thumbnail-body">
-                                    <a href="http://localhost:8000/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
-                                        <img src="{{ STATIC_URL }}img/media/polpa_3.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="thumbnail-title">
-                                    <h2><a href="http://localhost:8000/produtos/itens/">Polpa 100g</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
-                                </div>
-                            </div>
-                          </li>
-                          <!-- break -->
-                          <li class="span4">
-                            <div class="thumbnail">
-                                <div class="thumbnail-body">
-                                    <a href="http://localhost:8000/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
-                                        <img src="{{ STATIC_URL }}img/media/polpa_1.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="thumbnail-title">
-                                    <h2><a href="http://localhost:8000/produtos/itens/">Polpa 100g</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
-                                </div>
-                            </div>
-                          </li>
-                          <!-- break -->
-                          <li class="span4">
-                            <div class="thumbnail">
-                                <div class="thumbnail-body">
-                                    <a href="http://localhost:8000/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
-                                        <img src="{{ STATIC_URL }}img/media/polpa_2.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="thumbnail-title">
-                                    <h2><a href="http://localhost:8000/produtos/itens/">Polpa 100g</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
-                                </div>
-                            </div>
-                          </li>
-                          <!-- break -->
-                          <li class="span4">
-                            <div class="thumbnail">
-                                <div class="thumbnail-body">
-                                    <a href="http://localhost:8000/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
-                                        <img src="{{ STATIC_URL }}img/media/polpa_3.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="thumbnail-title">
-                                    <h2><a href="http://localhost:8000/produtos/itens/">Polpa 100g</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
-                                </div>
-                            </div>
-                          </li>
-                          <!-- end:loop-article -->
-                        </ul>
-
-                    </div>
-
-                    <!--begin:pagination-->
-                    <div class="row-fluid">
-                        <div class="span12">
-                            <div class="pagination pagination-centered">
-                                <ul>
-                                    <li><a href="#">«</a></li>
-                                    <li class="disabled"><a href="#">1</a></li>
-                                    <li class="active"><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                    <li><a href="#">5</a></li>
-                                    <li><a href="#">»</a></li>
-                                </ul>
+                            <div class="thumbnail-title">
+                                <h2><a href="/produtos/itens/">Polpa 100g</a></h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
                             </div>
                         </div>
-                    </div>
-                    <!--end:pagination-->
+                      </li>
+                      <!-- break -->
+                      <li class="span4">
+                        <div class="thumbnail">
+                            <div class="thumbnail-body">
+                                <a href="/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
+                                    <img src="{{ STATIC_URL }}img/media/polpa_2.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="thumbnail-title">
+                                <h2><a href="/produtos/itens/">Polpa 100g</a></h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
+                            </div>
+                        </div>
+                      </li>
+                      <!-- break -->
+                      <li class="span4">
+                        <div class="thumbnail">
+                            <div class="thumbnail-body">
+                                <a href="/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
+                                    <img src="{{ STATIC_URL }}img/media/polpa_3.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="thumbnail-title">
+                                <h2><a href="/produtos/itens/">Polpa 100g</a></h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
+                            </div>
+                        </div>
+                      </li>
+                      <!-- break -->
+                      <li class="span4">
+                        <div class="thumbnail">
+                            <div class="thumbnail-body">
+                                <a href="/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
+                                    <img src="{{ STATIC_URL }}img/media/polpa_1.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="thumbnail-title">
+                                <h2><a href="/produtos/itens/">Polpa 100g</a></h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
+                            </div>
+                        </div>
+                      </li>
+                      <!-- break -->
+                      <li class="span4">
+                        <div class="thumbnail">
+                            <div class="thumbnail-body">
+                                <a href="/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
+                                    <img src="{{ STATIC_URL }}img/media/polpa_2.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="thumbnail-title">
+                                <h2><a href="/produtos/itens/">Polpa 100g</a></h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
+                            </div>
+                        </div>
+                      </li>
+                      <!-- break -->
+                      <li class="span4">
+                        <div class="thumbnail">
+                            <div class="thumbnail-body">
+                                <a href="/produtos/itens/" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit">
+                                    <img src="{{ STATIC_URL }}img/media/polpa_3.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="thumbnail-title">
+                                <h2><a href="/produtos/itens/">Polpa 100g</a></h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis lectus metus, at posuere neque.</p>
+                            </div>
+                        </div>
+                      </li>
+                      <!-- end:loop-article -->
+                    </ul>
 
                 </div>
-                <!-- end:blog-article -->
+
+                <!--begin:pagination-->
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div class="pagination pagination-centered">
+                            <ul>
+                                <li><a href="#">«</a></li>
+                                <li class="disabled"><a href="#">1</a></li>
+                                <li class="active"><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                                <li><a href="#">»</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--end:pagination-->
 
             </div>
-            <!-- end:elements -->
+            <!-- end:blog-article -->
+
 
         </div>
         <!-- Right sidebar -->
