--- a/canaa/talents/templates/talents/talent.html
+++ b/canaa/talents/templates/talents/talent.html
@@ -31,16 +31,22 @@
                     <h3>Contato</h3>
                     <i class="icons-marker icon-home"></i>
                     <div class="contact-address">
-                        138 Atlantis Ln<br>
-                        Kingsport<br>
-                        Illinois 121164<br>
+                        {{ enterprise.address }}, {{ enterprise.number }}<br>
+                        {{ enterprise.complement }}, {{ enterprise.district }}<br>
+                        {{ enterprise.city }}/{{ enterprise.state }}, {{ enterprise.cep }}<br>
                     </div>
                     <i class="icons-marker icon-phone"></i>
-                    <div>+1 800 559 6580</div>
+                    <div>{{ enterprise.phone1 }}</div>
+                    {% if enterprise.phone2 %}
+                    <i class="icons-marker icon-phone"></i>
+                    <div>{{ enterprise.phone2 }}</div>
+                    {% endif %}
+                    {% if enterprise.phone3 %}
                     <i class="icons-marker icon-print"></i>
-                    <div>+1 504 889 9898</div>
+                    <div>{{ enterprise.phone3 }}</div>
+                    {% endif %}
                     <i class="icons-marker icon-envelope"></i>
-                    <div><span>mail@demolink.org</span></div>
+                    <div><span>{{ enterprise.email }}</span></div>
                 </div>
             </div>
         </div>
