--- a/canaa/core/templates/home.html
+++ b/canaa/core/templates/home.html
@@ -1,119 +1,76 @@
 {% extends "base.html" %}
 
+{% block nav_body %}{{ bannerone.image.url }}{% endblock %}
+
 {% block content %}
     <!-- begin:home-slider -->
     <div class="row-fluid">
         <div class="k-created banner span12">
             <h1>
-                <span>O Sabor da Natureza,</span><br>
-                <span>Polpas de Fruta Canaã.</span>
+                {% autoescape off %}
+                <span>{{ bannerone.title|linebreaks }}</span>
+                {% endautoescape %}
             </h1>
-            <a class="btn btn-info" href="/institucional/"><span>conheça nossa empresa</span></a>
+            <a class="btn btn-info" href="/{{ bannerone.link }}/">
+                <span>{{ bannerone.label }}</span>
+            </a>
         </div>
     </div>
     <!-- end:home-slider -->
 
     <!-- begin:item -->
     <div class="row-fluid k-prod">
-
-        <div class="span3 k-item k-item_num0">
+        {% for p in products %}
+        <div class="span3 k-item k-item_num{{ forloop.counter }}">
             <div class="k-item_img">
-                <a href="/produtos/itens/">
-                    <img src="{{ STATIC_URL }}/img/media/polpa_canaa_manga.jpg" alt="" style="width: 140px;">
+                <a href="{{ p.get_absolute_url }}">
+                    <img src="{{ p.image.url }}" alt="{{ p.name }}" style="width: 140px;">
                 </a>
             </div>
-            <div class="k-item_content k-item_num0">
-                <h4><a href="/produtos/itens/">Manga</a></h4>
+            <div class="k-item_content k-item_num{{ forloop.counter }}">
+                <h4><a href="/produtos/itens/">{{ p.name }}</a></h4>
                 <div class="k-item_introtext">
-                    <p>Nertyase riertases lertyarssety kertyace aseteras aplicaboes kerti.</p>
+                    <p>{{ p.description|truncatewords_html:18 }}</p>
                 </div>
-                <a class="btn btn-k-item_num0 btn-small" href="/produtos/itens/"><span>veja mais</span></a>
-            </div>
-        </div>
-        <div class="span3 k-item k-item_num1">
-            <div class="k-item_img">
-                <a href="/produtos/itens/">
-                    <img src="{{ STATIC_URL }}/img/media/polpa_canaa_manga.jpg" alt="" style="width: 140px;">
+                <a class="btn btn-k-item_num{{ forloop.counter }} btn-small" href="{{ p.get_absolute_url }}">
+                    <span>veja mais</span>
                 </a>
             </div>
-            <div class="k-item_content k-item_num1">
-                <h4><a href="/produtos/itens/">Manga</a></h4>
-                <div class="k-item_introtext">
-                    <p>Nertyase riertases lertyarssety kertyace aseteras aplicaboes kerti.</p>
-                </div>
-                <a class="btn btn-k-item_num1 btn-small" href="/produtos/itens/"><span>veja mais</span></a>
-            </div>
         </div>
-        <div class="span3 k-item k-item_num2">
-            <div class="k-item_img">
-                <a href="/produtos/itens/">
-                    <img src="{{ STATIC_URL }}/img/media/polpa_canaa_manga.jpg" alt="" style="width: 140px;">
-                </a>
-            </div>
-            <div class="k-item_content k-item_num2">
-                <h4><a href="/produtos/itens/">Manga</a></h4>
-                <div class="k-item_introtext">
-                    <p>Nertyase riertases lertyarssety kertyace aseteras aplicaboes kerti.</p>
-                </div>
-                <a class="btn btn-k-item_num2 btn-small" href="/produtos/itens/"><span>veja mais</span></a>
-            </div>
-        </div>
-        <div class="span3 k-item k-item_num3">
-            <div class="k-item_img">
-                <a href="/produtos/itens/">
-                    <img src="{{ STATIC_URL }}/img/media/polpa_canaa_manga.jpg" alt="" style="width: 140px;">
-                </a>
-            </div>
-            <div class="k-item_content k-item_num3">
-                <h4><a href="#">Manga</a></h4>
-                <div class="k-item_introtext">
-                    <p>Nertyase riertases lertyarssety kertyace aseteras aplicaboes kerti.</p>
-                </div>
-                <a class="btn btn-k-item_num3 btn-small" href="/produtos/itens/"><span>veja mais</span></a>
-            </div>
-        </div>
-
+        {% endfor %}
     </div>
     <!-- end:item -->
 
     <!-- begin:content -->
     <div class="row-fluid k-blog">
         <!-- begin:blog -->
+        {% for b in posts %}
         <div class="span3 k-item">
             <div class="k-item_img">
-                <a href="/mais-saude/post/">
-                    <img src="{{ STATIC_URL }}img/media/acai.jpg" alt="">
+                <a href="{{ b.get_absolute_url }}">
+                    <img src="{{ b.image.url }}" alt="{{ b.title }}" width="209" height="142">
                 </a>
             </div>
             <div class="k-item_content">
-                    <h3>8 Benefícios do Açai para sua Saúde</h3>
+                    <h3>{{ b.title }}</h3>
                 <div class="k-item_introtext">
-                    <p>O Açaí é o fruto do açaizeiro, Ele é fruta tipicamente brasileira e de grande importância econômica...</p>
+                    <p>{{ b.body|truncatewords_html:20 }}</p>
                 </div>
-                <a class="btn btn-red btn-small" href="/mais-saude/post/"><span>veja mais</span></a>
-            </div>
-        </div>
-        <div class="span3 k-item">
-            <div class="k-item_img">
-                <a href="/mais-saude/post/">
-                    <img src="{{ STATIC_URL }}img/media/abacaxi.jpg" alt="">
+                <a class="btn btn-red btn-small" href="{{ b.get_absolute_url }}">
+                    <span>veja mais</span>
                 </a>
             </div>
-            <div class="k-item_content">
-                <h3>Abacaxi Emagrece e Elimina Líquido</h3>
-                <div class="k-item_introtext">
-                    <p>Desde os primórdios da humanidade, as frutas possuem uma importância na dieta de...</p>
-                </div>
-                <a class="btn btn-red btn-small" href="/mais-saude/post/"><span>veja mais</span></a>
-            </div>
         </div>
+        {% endfor %}
         <div class="moduletable k-offer span6">
-            <h1 class="moduleTitle ">Refresco Em Pó Natural</h1>
+            <h1 class="moduleTitle ">{{ bannertwo.title }}</h1>
             <div class="mod-article-single mod-article-single__offer">
                 <div class="item__module">
                     <div class="item_introtext">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
-                        <a class="btn btn-danger" href="/produtos/"><span>conheça nossa linha de refresco em pó</span></a>
+                        <p>{{ bannertwo.text }}</p>
+                        <a class="btn btn-danger" href="/{{ bannertwo.link }}/">
+                            <span>{{ bannertwo.label }}</span>
+                        </a>
                     </div>
                 </div>
             </div>
