--- a/canaa/core/templates/institutional.html
+++ b/canaa/core/templates/institutional.html
@@ -10,12 +10,13 @@
             <div class="row-fluid">
                 <div class="span7 right-line">
                     <blockquote>
-                        <p>A Canaã é a empresa mais moderna de polpa de fruta de Brasil, instalada em uma planta de 14.000 m², no município de Goiana-PE.</p>
-                        <p>Empresa compromissada com o desenvolvimento de seus colaboradores, clientes e meio ambiente. A garantia de qualidade Canaã, lhe proporciona uma segurança alimentar devido a pasteurização de seus produtos como também pela rígida política de seleção e qualidade de sua matéria prima.</p>
+                        {% autoescape off %}
+                        {{ institutional.content|linebreaks }}
+                        {% endautoescape %}
                     </blockquote>
                 </div>
                 <div class="span5">
-                    <img class="k-top" src="{{ STATIC_URL }}img/media/empresa_01.jpg">
+                    <img class="k-top" src="{{ institutional.image.url }}">
                 </div>
             </div>
 
@@ -24,11 +25,13 @@
             </div>
             <div class="row-fluid">
                 <div class="span5 marg20-btm">
-                    <img class="k-top" src="{{ STATIC_URL }}img/media/empresa_01.jpg">
+                    <img class="k-top" src="{{ mission.image.url }}">
                 </div>
                 <div class="span7">
                     <blockquote>
-                        <p>Produzir e comercializar alimentos de qualidade, visando a satisfação dos clientes, contribuindo para uma vida saudável, zelando pelo meio ambiente e ser um colaborador do bem-estar da sociedade.</p>
+                        {% autoescape off %}
+                        {{ mission.content|linebreaks }}<br>
+                        {% endautoescape %}
                     </blockquote>
                 </div>
             </div>
@@ -37,47 +40,25 @@
                 <h3 align="center">Responsabilidade Social</h3>
             </div> -->
             <div class="row-fluid content-home marg60-top">
+                {% for step in steps %}
                 <div class="span4 pricing pricing-style5">
                     <ul>
-                        <li class="head">Meio Ambiente</li>
-                        <li class="price"><center><div class="k-icon k-item_num2"><i class="icon-leaf"></i></div></center><p></p></li>
-                        <li>Pensando de forma sustentável, buscamos otimizar nossos processos internos, reaproveitamos os resíduos de forma inteligente, tratamos a água que retorna ao meio ambiente e conscientizamos os produtores quanto á produção das frutas.</li>
+                        <li class="head">{{ step.title }}</li>
+                        <li class="price"><center><div class="k-icon k-item_num{{ forloop.counter }}"><i class="{{ step.icon }}"></i></div></center><p></p></li>
+                        <li>{{ step.description }}</li>
                     </ul>
                 </div>
-                <div class="span4 pricing pricing-style5">
-                    <ul>
-                        <li class="head">Funcionários</li>
-                        <li class="price"><center><div class="k-icon k-item_num1"><i class="icon-group"></i></div></center><p></p></li>
-                        <li>Zelamos pelo seu bem estar, oferecendo ótimas condições ao desenvolvimento de suas funções. Como também fazendo o devido acompanhamento de sua saúde (consultas e exames médicos regulares) além de fazer exercício físico periódico na empresa.</li>
-                    </ul>
-                </div>
-                <div class="span4 pricing pricing-style5">
-                    <ul>
-                        <li class="head">Sociedade</li>
-                        <li class="price"><center><div class="k-icon k-item_num3"><i class="icon-globe"></i></div></center><p></p></li>
-                        <li>Sempre preocupados em fazer nossa parte para plantarmos um futuro melhor para todos. Fazemos doações regulares para creches, abrigos e associações filantrópicas.</li>
-                    </ul>
-                </div>
+                {% endfor %}
             </div>
 
             <div class="row-fluid marg20-top marg20-btm">
                 <h3>Clientes</h3>
                 <div id="owl-demo" class="owl-carousel">
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/bonanza.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/carrefour.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/bompreco.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/bonanza.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/carrefour.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/bompreco.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/bonanza.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/carrefour.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/bompreco.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/bonanza.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/carrefour.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/bompreco.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/bonanza.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/carrefour.jpg" alt=""></div>
-                    <div class="item"><img src="{{ STATIC_URL }}img/media/bompreco.jpg" alt=""></div>
+                    {% for customer in customers %}
+                        <div class="item"><img src="{{ customer.image.url }}" alt="{{ customer.name }}"></div>
+                    {% empty %}
+                        <p>Nenhum cliente encontrado.</p>
+                    {% endfor %}
                 </div>
             </div>
 
