--- a/canaa/talents/templates/talents/talent_detail.html
+++ b/canaa/talents/templates/talents/talent_detail.html
@@ -3,51 +3,50 @@
 {% block nav_talent %} class="active"{% endblock %}
 
 {% block content %}
-    <div class="row-fluid">
-        <div class="span12">
-            <img src="{{ STATIC_URL }}img/trabalhe_conosco_fipel.jpg">
+    <div class="k-content">
+        <div class="row-fluid">
+            <h3>Trabalhe Conosco</h3>
+            <img class="k-top" src="{{ STATIC_URL }}img/trabalhe_conosco_canaa.jpg">
         </div>
-    </div>
 
-    <div class="row-fluid" style="background: #f6eee3;">
-        <img src="{{ STATIC_URL }}img/sha-up.png" width="100%" style="vertical-align: top;">
-    </div>
-
-    <!-- begin:content -->
-    <div class="row-fluid">
-        <div class="span12 content-wrapper k-bordas-1 k-bordas-3">
-            <!-- begin:contact -->
+        <div class="row-fluid marg30-top">
+            <div class="contact-details">
                 <div class="span7">
-                    <header>
-                        <h2>Envie seu currículo</h2>
-                    </header>
+                    <h3>Envie seu currículo</h3>
                     <p>Parabéns {{ talent.name }}, seu curriculo foi enviado com sucesso!</p>
-                    <p>Em breve, entraremos em contato pelo 
+                    <p>Em breve, entraremos em contato pelo
                         {% if talent.phone1 %}
                             fone: {{ talent.phone1 }}
                         {% else %}
                             email: {{ talent.email }}
                         {% endif %}.
                     </p>
-                    <p><a class="btn btn-red" href="{% url 'talent' %}">Voltar</a></p>
-                </div>
-
-                <div class="span4 offset1">
-                    <header>
-                        <h2>Contato</h2>
-                    </header>
-                    <p>{{ work.content }}</p>
+                    <p><a class="btn validate btn-primary" href="{% url 'talent' %}">Voltar</a></p>
                     <br>
-                    <address>
-                        <i class="icon-building"></i> <strong>{{ enterprise.name }}</strong><br>
-                        <i class="icon-home"></i> {{ enterprise.address }}, {{ enterprise.number }} - {{ enterprise.complement }}<br>
-                        <i class="icon-map-marker"></i> {{ enterprise.district }} - {{ enterprise.city }}/{{ enterprise.state }} - {{ enterprise.country }}<br>
-                        <i class="icon-phone"></i> {{ enterprise.phone1 }}<br>
-                        <i class="icon-envelope"></i> {{ enterprise.email }}<br>
-                    </address>
                 </div>
-                <!-- end:contact -->
-            
+                <div class="span1"></div>
+                <div class="span4">
+                    <h3>Contato</h3>
+                    <i class="icons-marker icon-home"></i>
+                    <div class="contact-address">
+                        {{ enterprise.address }}, {{ enterprise.number }}<br>
+                        {{ enterprise.complement }}, {{ enterprise.district }}<br>
+                        {{ enterprise.city }}/{{ enterprise.state }}, {{ enterprise.cep }}<br>
+                    </div>
+                    <i class="icons-marker icon-phone"></i>
+                    <div>{{ enterprise.phone1 }}</div>
+                    {% if enterprise.phone2 %}
+                    <i class="icons-marker icon-phone"></i>
+                    <div>{{ enterprise.phone2 }}</div>
+                    {% endif %}
+                    {% if enterprise.phone3 %}
+                    <i class="icons-marker icon-print"></i>
+                    <div>{{ enterprise.phone3 }}</div>
+                    {% endif %}
+                    <i class="icons-marker icon-envelope"></i>
+                    <div><span>{{ enterprise.email }}</span></div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- end:content -->
