Correcao do banner nas internas

--- a/canaa/core/templates/base.html
+++ b/canaa/core/templates/base.html
@@ -1,6 +1,5 @@
 {% load i18n %}
 {% load staticfiles %}
-{% load bootstrap3 %}
 <!DOCTYPE html>
 <html lang="pt-br" class="no-js">
   <head>
@@ -43,7 +42,7 @@
     {% endblock css %}
   </head>
 
-  <body style="background: url('{% block nav_body %}{% endblock %}') repeat-x scroll 50% 0px #ffcc7d;">
+  <body style="background: url('{{ bannerone.image.url }}') repeat-x scroll 50% 0px #ffcc7d;">
 
     <div style="background-color: #fff; width: 100%; position: fixed; z-index: 999">
         <div class="container pull">
