Melhorando o link dos produtos na home

--- a/canaa/catalog/templates/catalog/catalog_group.html
+++ b/canaa/catalog/templates/catalog/catalog_group.html
@@ -11,7 +11,7 @@
             </span>
             <span class="span4">
                 <div class="search-form">
-                    <form role="form" action="#" method="get">
+                    <form role="form" action="." method="get">
                         <div class="input-append">
                           <input class="span10" id="search" type="text" name="search" placeholder="Buscar">
                           <button class="btn btn-info" type="submit"><i class="icon-search visible-phone"></i><span class="hidden-phone"><i class="icon-search"></i></span></button>
