--- a/canaa/core/templates/home.html
+++ b/canaa/core/templates/home.html
@@ -21,16 +21,16 @@
         {% for p in products %}
         <div class="span3 k-item k-item_num{{ forloop.counter }}">
             <div class="k-item_img">
-                <a href="{{ p.get_absolute_url }}">
+                <a href="{{ p.get_absolute_url }}?search={{ p.name }}">
                     <img src="{{ p.image.url }}" alt="{{ p.name }}" style="width: 140px;">
                 </a>
             </div>
             <div class="k-item_content k-item_num{{ forloop.counter }}">
-                <h4><a href="{{ p.get_absolute_url }}">{{ p.name }}</a></h4>
+                <h4><a href="{{ p.get_absolute_url }}?search={{ p.name }}">{{ p.name }}</a></h4>
                 <div class="k-item_introtext">
                     <p>{{ p.description|truncatewords_html:18 }}</p>
                 </div>
-                <a class="btn btn-k-item_num{{ forloop.counter }} btn-small" href="{{ p.get_absolute_url }}">
+                <a class="btn btn-k-item_num{{ forloop.counter }} btn-small" href="{{ p.get_absolute_url }}?search={{ p.name }}">
                     <span>veja mais</span>
                 </a>
             </div>
