#4411436 - Campo de assunto no contato

--- a/canaa/core/templates/contact_mail.html
+++ b/canaa/core/templates/contact_mail.html
@@ -1,4 +1,5 @@
 <p><strong>Nome:</strong> {{ name }}</p>
 <p><strong>E-mail:</strong> {{ email }}</p>
+<p><strong>Assunto:</strong> {{ subject }}</p>
 <p><strong>Mensagem:</strong></p>
 {{ message|linebreaks }}
