#4411430 - Redimensionamento das imagens do topo #2

--- a/canaa/core/templates/sellers.html
+++ b/canaa/core/templates/sellers.html
@@ -7,7 +7,7 @@
     <div class="k-content">
         <div class="row-fluid">
             <h3>Representantes</h3>
-            <img class="k-top marg20-btm" src="{{ sale.image.url }}">
+            <img class="k-top marg20-btm" src="{{ sale.image.url }}" width="100%">
             <p>{{ sale.content }}</p>
         </div>
 
