--- a/canaa/talents/templates/talents/talent.html
+++ b/canaa/talents/templates/talents/talent.html
@@ -8,7 +8,7 @@
         <div class="row-fluid">
             <h3>Trabalhe Conosco</h3>
             {% for p in page %}
-            <img class="k-top marg20-btm" src="{{ p.image.url }}">
+            <img class="k-top marg20-btm" src="{{ p.image.url }}" width="100%">
             <p>{{ p.content }}</p>
             {% endfor %}
         </div>
